# codolytics

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  docker-compose.override.yml  docker-compose.yml
backend/: backend.dockerfile
backend/app/: .flake8  pyproject.toml
backend/app/alembic/versions/: d994f4a42776_drop_items_table.py  e3b9160c9f83_project_and_repository_table_created.py
backend/app/app/: main.py
backend/app/app/api/api_v1/endpoints/: login.py  users.py  utils.py
backend/app/app/core/: config.py
backend/app/app/crud/: __init__.py  crud_user.py  project.py  repository.py
backend/app/app/db/: base.py
backend/app/app/errors/: __init__.py
backend/app/app/graphql/: context.py  schema.py
backend/app/app/graphql/mutations/: __init__.py  addproject.py  addrepository.py  login.py
backend/app/app/graphql/schema/: Metrics.graphql  Project.graphql  ProjectMutation.graphql  Query.graphql  Repository.graphql  RepositoryMutation.graphql
backend/app/app/graphql/shared/schema/: Error.graphql  Mutation.graphql  Scalars.graphql  User.graphql
backend/app/app/graphql/types/: __init__.py  metrics.py  query.py
backend/app/app/loaders/: __init__.py  loader.py  projects.py  users.py
backend/app/app/models/: __init__.py  project.py  repository.py  user.py
backend/app/app/schemas/: __init__.py  project.py  repository.py
backend/app/app/services/metrics/: metrics.py  utils.py
backend/app/app/tests/services/: test_metrics.py
backend/app/app/validation/: __init__.py  validation.py  validators.py
backend/app/scripts/: format.sh
(+3 files in other folders)
