[tool.poetry]
name = "codolytics"
version = "0.0.1"
description = ""
authors = ["Tushant Khatiwada <programmertushant@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.14.0"
fastapi = "^0.65.2"
email-validator = "^1.1.3"
requests = "^2.25.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
emails = "^0.6"
raven = "^6.10.0"
gunicorn = "^20.1.0"
alembic = "^1.6.5"
SQLAlchemy = "^1.4.20"
pytest = "^6.2.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
psycopg2 = "^2.9.1"
tenacity = "^7.0.0"
python-multipart = "^0.0.5"
celery = "^5.1.2"
ariadne = "^0.13.0"
aiodataloader = "^0.2.0"
Unidecode = "^1.2.0"
pandas = "^1.3.0"
numpy = "^1.21.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.6b0"
isort = "^5.9.1"
autoflake = "^1.4"
flake8 = "^3.9.2"
pytest = "^6.2.4"
sqlalchemy-stubs = "^0.4"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 89

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
